NetworkPolicies/default-deny-all-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: test
spec:
  podSelector: {}
  policyTypes:
  - Egress
