NetworkPolicies/example-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: example-egress
  namespace: test
spec:
  podSelector:
     matchLabels:
        pod: egress
  policyTypes:
  - Egress
  egress: 
    - to: 
      - namespaceSelector: 
          matchLabels: 
            ns: default
        podSelector:
          matchLabels:
            demo: pod
