NetworkPolicies/example-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: example-ingress
  namespace: test
spec:
  podSelector:
     matchLabels:
        pod: ingress
  policyTypes:
  - Ingress
  ingress: 
    - from: 
      - namespaceSelector: 
          matchLabels: 
            ns: default
      - podSelector:
          matchLabels:
            demo: pod
